--- a/config.json
+++ b/config.json
@@ -12,13 +12,13 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "GoatBot",
-	"prefix": "-",
+	"nickNameBot": "❆🍁𝐯𝐨𝐫𝐭𝐞𝐱 𝐛𝐨𝐭🍁❆",
+	"prefix": "+",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": [],
+	"adminBot": [61568284950787  ],
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [],
